--- a/index.html
+++ b/index.html
@@ -3,54 +3,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="Website icon" type="png" href="images/NotFiercePlayz__2_-removebg-preview.png">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+	<link rel="Website icon" type="png" href="images/NotFiercePlayz__2_-removebg-preview.png">
+    <title>Profile Card</title>
 </head>
 <body>
-    <div class="profile-container">
-        <div class="img-container">
-            <img src="images/NotFiercePlayz (3).png" alt="profile image">
+    <div class="card">
+        <div class="header">
+            <img src="Images/Fierce (5).png">
+            <h3>Fierce</h3>
+            <p>Web Developer</p>
         </div>
-        <p class="info full-name">FiercePlayz</p>
-        <p class="info role">
-            <i class="fab fa-html5"></i><br>
-            Web Developer
-        </p>
-        <p class="info place">
-            <i class="fas fa-map-marker-alt"></i><br>
-            India
-        </p>
-
-        <div class="posts-info">
-            <p><span>50+</span> Posts</p>
-            <p><span>500+</span> Views</p>
-            <p><span>10+</span> Webpages</p>
+        <div class="body">
+            <ul>
+                <li>
+                    <h3>India</h3>
+                    <p>Born</p>
+                    <i class="fa fa-map-marker"></i>
+                </li>
+                <li>
+                    <h3>FiercePlayz@gmail.com</h3>
+                    <p>Email address</p>
+                    <i class="fas fa-envelope"></i>
+                </li>
+                <li>
+                    <h3>NotFiercePlayz</h3>
+                    <p>Github Username</p>
+                    <i class="fab fa-github"></i>
+                </li>
+            </ul>
         </div>
-
-        <div class="social-container">
-            <a href="https://notfierceplayz.github.io/artgallery/"><button class="youtube">
-                <i class="fab fa-chrome"></i></a>
-            </button>
-            <a href="https://notfierceplayz.github.io/About-Me/"><button class="github">
-                <i class="fab fa-chrome"></i></a>
-            </button>
-            <a href="https://github.com/notfierceplayz"><button class="linkedin">
-                <i class="fab fa-github"></i></a>
-            </button>
-            <a href="https://www.instagram.com/_poojan_.91_/"><button class="instagram">
-                <i class="fab fa-instagram"></i></a>
-            </button>
-           
+        <div class="footer">
+            <ul>
+                <li>
+                    <i class="fab fa-chrome"></i>
+                </li>
+                <li>
+                    <i class="fab fa-chrome"></i>
+                </li>
+                <li>
+                    <i class="fab fa-chrome"></i>
+                </li>
+                <li>
+                    <i class="fab fa-instagram"></i>
+                </li>
+            </ul>
         </div>
-
-        <button class="action">Follow</button>
-        <button class="action message">Portfolio</button>
-        <div class="credit">Made  <span style="color:tomato">❤</span> by <br><a  href="https://notfierceplayz.github.io/portfolio/">NotFiercePlayz</a></div>
     </div>
-    
+    <div class="credit">Made <span style="color:tomato">❤</span> by <a  href="https://NotFiercePlayz.github.io/portfolio/">NotFiercePlayz</a></div>
 </body>
 </html>
