--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <div class="footer">
             <ul>
                 <li>
-                    <i class="fab fa-chrome"></i>
+                    <a href="https:NotFiercePlayz.github.io/artgallery/"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
-                    <i class="fab fa-chrome"></i>
+                 <a href="https://NotFiercePlayz.github.io/About-Me/"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
-                    <i class="fab fa-chrome"></i>
+                    <a href="#"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
-                    <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/_poojan_.91_/"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
