--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="footer">
             <ul>
                 <li>
-                    <a href="https:NotFiercePlayz.github.io/artgallery/"><i class="fab fa-chrome"></i></a>
+                    <a href="https://NotFiercePlayz.github.io/artgallery/"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
                  <a href="https://NotFiercePlayz.github.io/About-Me/"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-chrome"></i></a>
+                    <a href="https://NotFiercePlayz.github.io/skills/"><i class="fab fa-chrome"></i></a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/_poojan_.91_/"><i class="fab fa-instagram"></i></a>
